[Admin all product] fix text overflow at table

--- a/assets/_table.scss
+++ b/assets/_table.scss
@@ -62,6 +62,10 @@
     width: 120px;
   }
 
+  .width_150 {
+    width: 150px;
+  }
+
   tbody .action-column{
     width: 60px;
     padding-top: 14px;
